# Assessment_Task_Mobile_Robotic_ROS2

./: README.md
ros2_ws/: .exam.sh.swp  README.md  exam.sh
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/explore_lite/share/explore_lite/: local_setup.sh  package.sh
ros2_ws/install/explore_lite/share/explore_lite/config/: params.yaml  params_costmap.yaml
ros2_ws/install/mobile_robotic_course_assessment_task_2023/lib/mobile_robotic_course_assessment_task_2023/: find_yellow_and_put_marker.py
ros2_ws/install/mobile_robotic_course_assessment_task_2023/share/mobile_robotic_course_assessment_task_2023/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/multirobot_map_merge/share/multirobot_map_merge/: local_setup.sh  package.sh
ros2_ws/install/simple_robot_nav2_ros2/share/simple_robot_nav2_ros2/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/simple_robot_ros2/share/simple_robot_ros2/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/simple_robot_ros2/share/simple_robot_ros2/config/: simple_diff_drive.yaml
ros2_ws/install/simple_robot_ros2/share/simple_robot_ros2/launch/: simple_robot.launch.py
ros2_ws/install/simple_robot_ros2/share/simple_robot_ros2/urdf/: simple_robot.urdf.xacro
ros2_ws/install/simple_robot_ros2/share/simple_robot_ros2/worlds/: simple_world.world
ros2_ws/log/: latest_build
(+58 files in other folders)
