<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simple_robot_ros2</name>
  <version>0.0.1</version>
  <description>This ROS package provides a simple starting point for a mobile robotics course.  It is so developed, that the students can continually improve varying points of the package as their knowledge increases.</description>
  <maintainer email="gavin.kane@hs-emden-leer.de">SMEAC</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
